--- a/CodeMirror2/demo/theme.html
+++ b/CodeMirror2/demo/theme.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../theme/neat.css">
     <link rel="stylesheet" href="../theme/elegant.css">
     <link rel="stylesheet" href="../theme/night.css">
+    <link rel="stylesheet" href="../theme/monokai.css">
     <link rel="stylesheet" href="../theme/cobalt.css">
     <link rel="stylesheet" href="../theme/eclipse.css">
     <script src="../mode/javascript/javascript.js"></script>
@@ -37,6 +38,7 @@ function findSequence(goal) {
 <p>Select a theme: <select onchange="selectTheme(this)">
     <option selected>default</option>
     <option>night</option>
+    <option>monokai</option>
     <option>neat</option>
     <option>elegant</option>
     <option>cobalt</option>
