--- a/CodeMirror2/compress.html
+++ b/CodeMirror2/compress.html
@@ -43,8 +43,11 @@
       <select multiple="multiple" name="code_url" style="width: 40em;" class="field" id="files">
         <optgroup label="CodeMirror Library">
           <option value="http://codemirror.net/lib/codemirror.js" selected>codemirror.js</option>
-          <option value="http://codemirror.net/lib/overlay.js">overlay.js</option>
-          <option value="http://codemirror.net/lib/runmode.js">runmode.js</option>
+          <option value="http://codemirror.net/lib/util/overlay.js">overlay.js</option>
+          <option value="http://codemirror.net/lib/util/runmode.js">runmode.js</option>
+          <option value="http://codemirror.net/lib/util/simple-hint.js">simple-hint.js</option>
+          <option value="http://codemirror.net/lib/util/javascript-hint.js">javascript-hint.js</option>
+          <option value="http://codemirror.net/lib/util/codefold.js">codefold.js</option>
         </optgroup>
         <optgroup label="Modes">
           <option value="http://codemirror.net/mode/clike/clike.js">clike.js</option>
