Model editor with JQuery UI dialogs

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Copyright 2011 University of Surrey
 
 	<div id="dialog-message" title="Unable to complete request" style="display:none;"></div>
 	<div id="dialog-simple-error" title="Unable to complete request" style="display:none;"></div>
+	<div id="dialog-url-message" title="URL" style="display:none;"></div>
 	
 	<div id="tabs" style="display:none;">
 		<ul>
