Update to latest version of CodeMirror and use the simple-hint.css in index.html

--- a/CodeMirror2/demo/complete.html
+++ b/CodeMirror2/demo/complete.html
@@ -5,32 +5,12 @@
     <link rel="stylesheet" href="../lib/codemirror.css">
     <script src="../lib/codemirror.js"></script>
     <script src="../lib/util/simple-hint.js"></script>
+    <link rel="stylesheet" href="../lib/util/simple-hint.css">
     <script src="../lib/util/javascript-hint.js"></script>
     <link rel="stylesheet" href="../theme/night.css">
     <script src="../mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="../css/docs.css">
-
-    <style type="text/css">
-      .completions {
-        position: absolute;
-        z-index: 10;
-        overflow: hidden;
-        -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
-        -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
-        box-shadow: 2px 3px 5px rgba(0,0,0,.2);
-      }
-      .completions select {
-        background: #fafafa;
-        outline: none;
-        border: none;
-        padding: 0;
-        margin: 0;
-        font-family: monospace;
-      }
-      .CodeMirror {
-        border: 1px solid #eee;
-      }
-    </style>
+    <style type="text/css">.CodeMirror {border: 1px solid #eee;}</style>
   </head>
   <body>
     <h1>CodeMirror 2: Autocomplete demo</h1>
