--- a/CodeMirror2/manual.html
+++ b/CodeMirror2/manual.html
@@ -189,6 +189,11 @@
       non-whitespace character (unless already there) or to the start
       of the line. On by default.</dd>
 
+      <dt id="option_pollForIME"><code>pollForIME (boolean)</code></dt>
+      <dd>When on (off by default), this will cause CodeMirror to poll
+      for input more agressively in an attempt to respond quickly to
+      IME (composed character) input.</dd>
+
       <dt id="option_lineWrapping"><code>lineWrapping (boolean)</code></dt>
       <dd>Whether CodeMirror should scroll or wrap for long lines.
       Defaults to <code>false</code> (scroll).</dd>
