--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Copyright 2011 University of Surrey
 	<!-- end CSS-->
 
 	<link rel="stylesheet" href="CodeMirror2/lib/codemirror.css">
+	<link rel="stylesheet" href="CodeMirror2/lib/util/simple-hint.css">
 	<link rel="stylesheet" href="CodeMirror2/theme/default.css">
 	<link rel="stylesheet" href="css/cm/sbvr.css">
 	
