Update codemirror - hopefully will fix weirdness with ometa-dev.

--- a/CodeMirror2/demo/theme.html
+++ b/CodeMirror2/demo/theme.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../theme/monokai.css">
     <link rel="stylesheet" href="../theme/cobalt.css">
     <link rel="stylesheet" href="../theme/eclipse.css">
+    <link rel="stylesheet" href="../theme/rubyblue.css">
     <script src="../mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="../css/docs.css">
 
@@ -43,6 +44,7 @@ function findSequence(goal) {
     <option>elegant</option>
     <option>cobalt</option>
     <option>eclipse</option>
+    <option>rubyblue</option>
 </select>
 </p>
 
