--- a/CodeMirror2/index.html
+++ b/CodeMirror2/index.html
@@ -46,7 +46,7 @@
       <li><a href="mode/javascript/index.html">JavaScript</a></li>
       <li><a href="mode/jinja2/index.html">Jinja2</a></li>
       <li><a href="mode/lua/index.html">Lua</a></li>
-      <li><a href="mode/markdown/index.html">Markdown</a></li>
+      <li><a href="mode/markdown/index.html">Markdown</a> (<a href="mode/gfm/index.html">Github-flavour</a>)</li>
       <li><a href="mode/ntriples/index.html">NTriples</a></li>
       <li><a href="mode/pascal/index.html">Pascal</a></li>
       <li><a href="mode/perl/index.html">Perl</a></li>
@@ -54,6 +54,7 @@
       <li><a href="mode/plsql/index.html">PL/SQL</a></li>
       <li><a href="mode/python/index.html">Python</a></li>
       <li><a href="mode/r/index.html">R</a></li>
+      <li>RPM <a href="mode/rpm/spec/index.html">spec</a> and <a href="mode/rpm/changes/index.html">changelog</a></li>
       <li><a href="mode/rst/index.html">reStructuredText</a></li>
       <li><a href="mode/ruby/index.html">Ruby</a></li>
       <li><a href="mode/rust/index.html">Rust</a></li>
