--- a/CodeMirror2/compress.html
+++ b/CodeMirror2/compress.html
@@ -27,6 +27,7 @@
       <input type="hidden" id="download" name="download" value="codemirror-compressed.js"/>
       <p>Version: <select id="version" onchange="setVersion(this);" style="padding: 1px">
         <option value="http://codemirror.net/">HEAD</option>
+        <option value="http://marijnhaverbeke.nl/git/codemirror2?a=blob_plain;hb=v2.18;f=">2.18</option>
         <option value="http://marijnhaverbeke.nl/git/codemirror2?a=blob_plain;hb=v2.16;f=">2.16</option>
         <option value="http://marijnhaverbeke.nl/git/codemirror2?a=blob_plain;hb=v2.15;f=">2.15</option>
         <option value="http://marijnhaverbeke.nl/git/codemirror2?a=blob_plain;hb=v2.13;f=">2.13</option>
@@ -43,11 +44,6 @@
       <select multiple="multiple" name="code_url" style="width: 40em;" class="field" id="files">
         <optgroup label="CodeMirror Library">
           <option value="http://codemirror.net/lib/codemirror.js" selected>codemirror.js</option>
-          <option value="http://codemirror.net/lib/util/overlay.js">overlay.js</option>
-          <option value="http://codemirror.net/lib/util/runmode.js">runmode.js</option>
-          <option value="http://codemirror.net/lib/util/simple-hint.js">simple-hint.js</option>
-          <option value="http://codemirror.net/lib/util/javascript-hint.js">javascript-hint.js</option>
-          <option value="http://codemirror.net/lib/util/codefold.js">codefold.js</option>
         </optgroup>
         <optgroup label="Modes">
           <option value="http://codemirror.net/mode/clike/clike.js">clike.js</option>
@@ -83,6 +79,18 @@
           <option value="http://codemirror.net/mode/velocity/velocity.js">velocity.js</option>
           <option value="http://codemirror.net/mode/xml/xml.js">xml.js</option>
           <option value="http://codemirror.net/mode/yaml/yaml.js">yaml.js</option>
+        </optgroup>
+        <optgroup label="Utilities and add-ons">
+          <option value="http://codemirror.net/lib/util/overlay.js">overlay.js</option>
+          <option value="http://codemirror.net/lib/util/runmode.js">runmode.js</option>
+          <option value="http://codemirror.net/lib/util/simple-hint.js">simple-hint.js</option>
+          <option value="http://codemirror.net/lib/util/javascript-hint.js">javascript-hint.js</option>
+          <option value="http://codemirror.net/lib/util/codefold.js">codefold.js</option>
+          <option value="http://codemirror.net/lib/util/dialog.js">dialog.js</option>
+          <option value="http://codemirror.net/lib/util/search.js">search.js</option>
+        </optgroup>
+        <optgroup label="Keymaps">
+          <option value="http://codemirror.net/keymap/emacs.js">emacs.js</option>
         </optgroup>
       </select></p>
 
