worked on the ClientURIParser.ometa, done updates on formatting, mainly ''.
created new test/ClientURI.js and added it to test suite.

--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,7 @@
 	<script src="qunit/qunit.js"></script>
 	<script src="sbvr.js"></script>
 	<script src="server.js"></script>
+	<script src="ClientURI.js"></script>
 
 
 
