--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@ Copyright 2011 University of Surrey
 				<textarea id="modelArea" rows="15" cols="136"></textarea>
 				<div align="right">
 					<input type="button" id="write_file" value="Save File">
-					<input type="file" id="read_file" class="hidden-input" onchange="readFile(this.files);return false">	
-					<input type="button" value="Load File" onClick="toReadFile();return false">
+					<input type="file" id="read_file" class="hidden-input" onchange="readFile(this.files);return false">
+					<input type="button" id='load_file' value="Load File" onClick="toReadFile();return false">
 					<input type="button" id='save_model' value="Publish"  onClick="saveModel();return false">
 					<input type="button" id='blm1' value="Load Example 1"  onClick="loadmod(model1);return false">
 					<input type="button" id='blm2' value="Load Example 2"  onClick="loadmod(model2);return false">
 					<!--#IFDEF server -->
 						<input type="button" id='blm3' value="Load Example 3"  onClick="loadmod(model3);return false">
 					<!--#ENDIFDEF -->
-					<input type="button" id='save_model' value="Save Model"  onClick="saveModel();return false">
 					<!--#IFDEF editor -->
 						<input type="button" id='bpm'  value="Parse Model"   onClick="parseModel();return false">
 					<!--#ENDIFDEF-->
 					<input type="button" id='clear_editor' value="Clear Editor"  onClick="sbvrEditor.setValue('');return false">
 					<div id="downloadify"></div>
+					<div id="TheFileLoader"></div>
 					<!--#IFDEF server -->
 						<input type="button" id='bem'  value="Execute Model" onClick="transformClient(sbvrEditor.getValue());return false">
 						<input type="button" id='bum'  value="Update Model"  onClick="return false">
