--- a/src/client/frame-glue/src/index.html
+++ b/src/client/frame-glue/src/index.html
@@ -28,25 +28,16 @@ Copyright 2011 University of Surrey
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>rulemotion canvas</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
 
-	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-	<!-- CSS: implied media=all -->
-	<!-- CSS concatenated and minified via ant build script-->
+	<!-- 
 	<link rel="stylesheet" href="css/style.css">
-	<!-- end CSS-->
 
 	<link rel="stylesheet" href="CodeMirror2/lib/codemirror.css">
 	<link rel="stylesheet" href="CodeMirror2/lib/util/simple-hint.css">
 	<link rel="stylesheet" href="CodeMirror2/theme/default.css">
 	<link rel="stylesheet" href="css/cm/sbvr.css">
 	
-	<link type="text/css" href="css/ui-lightness/jquery-ui.css" rel="stylesheet" />
+	<link type="text/css" href="css/ui-lightness/jquery-ui.css" rel="stylesheet" />-->
 </head>
 
 <body>
@@ -138,22 +129,12 @@ Copyright 2011 University of Surrey
 
 
 	<!-- JavaScript at the bottom for fast page loading -->
-	<script type="text/javascript" src="js/libs/swfobject.js"></script>
-	<script type="text/javascript" src="js/libs/downloadify.min.js"></script>
-	<script src="js/libs/require-1.0.4.min.js"></script>
-
+	<!--script type="text/javascript" src="js/libs/swfobject.js"></script>
+	<script type="text/javascript" src="js/libs/downloadify.min.js"></script-->
+	<script src="../../../external/require-1.0.4.min.js"></script>
+	<script src="../../../common/config/requirejs.js"></script>
 	<script>
-		var requirejs = require;
-		requirejs({
-			baseUrl: 'js',
-			paths: {
-				jquery: 'libs/jquery-1.7.1.min'
-//				jquery: 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min'
-			},
-			priority: ['jquery']
-		}, ['libs/jquery-ui-1.8.17.custom.min',
-			'libs/jquery-custom-file-input',
-			'main']);
+		requirejs(['main']);
     </script>
 	
 </body>
