--- a/src/client/frame-glue/src/index.html
+++ b/src/client/frame-glue/src/index.html
@@ -1,43 +1,10 @@
 <!doctype html>
-<!--
-Copyright 2011 University of Surrey
-
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>		<html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>		<html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
 
-	<!-- Use the .htaccess and remove these lines to avoid edge case issues.
-			 More info: h5bp.com/b/378 -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 	<title>rulemotion canvas</title>
 
-	<!-- 
-	<link rel="stylesheet" href="css/style.css">
-
-	<link rel="stylesheet" href="CodeMirror2/lib/codemirror.css">
-	<link rel="stylesheet" href="CodeMirror2/lib/util/simple-hint.css">
-	<link rel="stylesheet" href="CodeMirror2/theme/default.css">
-	<link rel="stylesheet" href="css/cm/sbvr.css">
-	
-	<link type="text/css" href="css/ui-lightness/jquery-ui.css" rel="stylesheet" />-->
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
