--- a/src/external/CodeMirror2/index.html
+++ b/src/external/CodeMirror2/index.html
@@ -40,6 +40,7 @@
       <li><a href="mode/coffeescript/index.html">CoffeeScript</a></li>
       <li><a href="mode/css/index.html">CSS</a></li>
       <li><a href="mode/diff/index.html">diff</a></li>
+      <li><a href="mode/ecl/index.html">ECL</a></li>
       <li><a href="mode/go/index.html">Go</a></li>
       <li><a href="mode/groovy/index.html">Groovy</a></li>
       <li><a href="mode/haskell/index.html">Haskell</a></li>
@@ -56,6 +57,7 @@
       <li><a href="mode/perl/index.html">Perl</a></li>
       <li><a href="mode/php/index.html">PHP</a></li>
       <li><a href="mode/plsql/index.html">PL/SQL</a></li>
+      <li><a href="mode/properties/index.html">Properties files</a></li>
       <li><a href="mode/python/index.html">Python</a></li>
       <li><a href="mode/r/index.html">R</a></li>
       <li>RPM <a href="mode/rpm/spec/index.html">spec</a> and <a href="mode/rpm/changes/index.html">changelog</a></li>
@@ -86,6 +88,7 @@
       <li><a href="demo/resize.html">Auto-resizing editor</a></li>
       <li><a href="demo/marker.html">Setting breakpoints</a></li>
       <li><a href="demo/activeline.html">Highlighting the current line</a></li>
+      <li><a href="demo/matchhighlighter.html">Highlighting selection matches</a></li>
       <li><a href="demo/theme.html">Theming</a></li>
       <li><a href="demo/runmode.html">Stand-alone highlighting</a></li>
       <li><a href="demo/fullscreen.html">Full-screen editing</a></li>
@@ -169,7 +172,7 @@
     <li>Firefox 2 or higher</li>
     <li>Chrome, any version</li>
     <li>Safari 3 or higher</li>
-    <li>Internet Explorer 6 or higher</li>
+    <li>Internet Explorer 6 or higher in standards (<strong>non-quirks</strong>) mode</li>
     <li>Opera 9 or higher (with some key-handling problems on OS X)</li>
   </ul>
 
@@ -224,6 +227,19 @@
   </p>
 
   <h2>Releases:</h2>
+
+  <p class="rel">27-02-2012: <a href="http://codemirror.net/codemirror-2.22.zip">Version 2.22</a>:</p>
+
+  <ul class="rel-note">
+    <li>Allow <a href="doc/manual.html#keymaps">key handlers</a> to pass up events, allow binding characters.</li>
+    <li>Add <a href="doc/manual.html#option_autoClearEmptyLines"><code>autoClearEmptyLines</code></a> option.</li>
+    <li>Properly use tab stops when rendering tabs.</li>
+    <li>Make PHP mode more robust.</li>
+    <li>Support indentation blocks in <a href="doc/manual.html#util_foldcode">code folder</a>.</li>
+    <li>Add a script for <a href="doc/manual.html#util_match-highlighter">highlighting instances of the selection</a>.</li>
+    <li>New <a href="mode/properties/index.html">.properties</a> mode.</li>
+    <li>Fix many bugs.</li>
+  </ul>
 
   <p class="rel">27-01-2012: <a href="http://codemirror.net/codemirror-2.21.zip">Version 2.21</a>:</p>
 
@@ -334,19 +350,6 @@
     <li>Some fixes to indentation in C-like mode.</li>
     <li>Shrink horiz scrollbars when long lines removed.</li>
     <li>Fix width feedback loop bug that caused the width of an inner DIV to shrink.</li>
-  </ul>
-
-  <p class="rel">04-07-2011: <a href="http://codemirror.net/codemirror-2.11.zip">Version 2.11</a>:</p>
-  <ul class="rel-note">
-    <li>Add a <a href="mode/scheme/index.html">Scheme mode</a>.</li>
-    <li>Add a <code>replace</code> method to search cursors, for cursor-preserving replacements.</li>
-    <li>Make the <a href="mode/clike/index.html">C-like mode</a> mode more customizeable.</li>
-    <li>Update XML mode to spot mismatched tags.</li>
-    <li>Add <code>getStateAfter</code> API and <code>compareState</code> mode API methods for finer-grained mode magic.</li>
-    <li>Add a <code>getScrollerElement</code> API method to manipulate the scrolling DIV.</li>
-    <li>Fix drag-and-drop for Firefox.</li>
-    <li>Add a C# configuration for the <a href="mode/clike/index.html">C-like mode</a>.</li>
-    <li>Add <a href="demo/fullscreen.html">full-screen editing</a> and <a href="demo/changemode.html">mode-changing</a> demos.</li>
   </ul>
 
   <p><a href="doc/oldrelease.html">Older releases...</a></p>
