--- a/src/external/CodeMirror2/mode/less/index.html
+++ b/src/external/CodeMirror2/mode/less/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
   <head>
@@ -14,6 +13,18 @@
     <h1>CodeMirror: LESS mode</h1>
     <form><textarea id="code" name="code">
 /* Some LESS code */
+
+video {
+  background-image:url('paper.gif');
+}
+
+.pre_class {
+  width: 500px;
+  height: 250px;
+  background-image: url(sheep.png), url(betweengrassandsky.png);
+  background-position: center bottom, left top;
+  background-repeat: no-repeat;
+}
 
 @color: #4D926F;
 
