Update CodeMirror2, this includes the fix to stop backspace on the autocomplete popup from navigating backwards.

--- a/src/external/CodeMirror2/demo/activeline.html
+++ b/src/external/CodeMirror2/demo/activeline.html
@@ -59,8 +59,8 @@ var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
   lineNumbers: true,
   lineWrapping: true,
   onCursorActivity: function() {
-    editor.setLineClass(hlLine, null);
-    hlLine = editor.setLineClass(editor.getCursor().line, "activeline");
+    editor.setLineClass(hlLine, null, null);
+    hlLine = editor.setLineClass(editor.getCursor().line, null, "activeline");
   }
 });
 var hlLine = editor.setLineClass(0, "activeline");
