--- a/src/external/CodeMirror2/mode/less/index.html
+++ b/src/external/CodeMirror2/mode/less/index.html
@@ -11,19 +11,31 @@
   </head>
   <body>
     <h1>CodeMirror: LESS mode</h1>
-    <form><textarea id="code" name="code">
-/* Some LESS code */
+    <form><textarea id="code" name="code">/* Some LESS code */
 
-video {
-  background-image:url('paper.gif');
+@test_a: #eeeQQQ;//this is not a valid hex value and thus parsed as an element id
+@test_b: #eeeFFF//this is a valid hex value but the declaration doesn't end with a semicolon and thus parsed as an element id
+
+#eee aaa .box
+{
+  #test bbb {
+    width: 500px;
+    height: 250px;
+    background-image: url(sheep.png), url(betweengrassandsky.png);
+    background-position: center bottom, left top;
+    background-repeat: no-repeat;
+  }
 }
 
-.pre_class {
-  width: 500px;
-  height: 250px;
-  background-image: url(sheep.png), url(betweengrassandsky.png);
-  background-position: center bottom, left top;
-  background-repeat: no-repeat;
+@base: #f938ab;
+
+.box-shadow(@style, @c) when (iscolor(@c)) {
+  box-shadow:         @style @c;
+  -webkit-box-shadow: @style @c;
+  -moz-box-shadow:    @style @c;
+}
+.box-shadow(@style, @alpha: 50%) when (isnumber(@alpha)) {
+  .box-shadow(@style, rgba(0, 0, 0, @alpha));
 }
 
 @color: #4D926F;
@@ -171,7 +183,7 @@ blockquote {
 body > footer {
   text-align: left;
   margin-left: 10px;
-	font-style: italic;
+  font-style: italic;
   font-size: 18px;
   color: #888;
 }
