Updated CodeMirror2 to include submitted patch + most recent changes.

--- a/src/external/CodeMirror2/demo/theme.html
+++ b/src/external/CodeMirror2/demo/theme.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../theme/cobalt.css">
     <link rel="stylesheet" href="../theme/eclipse.css">
     <link rel="stylesheet" href="../theme/rubyblue.css">
+    <link rel="stylesheet" href="../theme/lesser-dark.css">
+    <link rel="stylesheet" href="../theme/xq-dark.css">
     <script src="../mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="../doc/docs.css">
 
@@ -44,6 +46,8 @@ function findSequence(goal) {
     <option>cobalt</option>
     <option>eclipse</option>
     <option>rubyblue</option>
+    <option>lesser-dark</option>
+    <option>xq-dark</option>
 </select>
 </p>
 
