--- a/src/external/CodeMirror2/index.html
+++ b/src/external/CodeMirror2/index.html
@@ -66,12 +66,14 @@
       <li><a href="mode/rust/index.html">Rust</a></li>
       <li><a href="mode/scheme/index.html">Scheme</a></li>
       <li><a href="mode/smalltalk/index.html">Smalltalk</a></li>
+      <li><a href="mode/smarty/index.html">Smarty</a></li>
       <li><a href="mode/sparql/index.html">SPARQL</a></li>
       <li><a href="mode/stex/index.html">sTeX, LaTeX</a></li>
       <li><a href="mode/tiddlywiki/index.html">Tiddlywiki</a></li>
       <li><a href="mode/velocity/index.html">Velocity</a></li>
       <li><a href="mode/verilog/index.html">Verilog</a></li>
       <li><a href="mode/xml/index.html">XML/HTML</a> (<a href="mode/xmlpure/index.html">alternative XML</a>)</li>
+      <li><a href="mode/xquery/index.html">XQuery</a></li>
       <li><a href="mode/yaml/index.html">YAML</a></li>
     </ul>
 
