--- a/src/external/CodeMirror2/mode/less/index.html
+++ b/src/external/CodeMirror2/mode/less/index.html
@@ -7,6 +7,7 @@
     <script src="less.js"></script>
     <style>.CodeMirror {background: #f8f8f8; border: 1px solid #ddd;}</style>
     <link rel="stylesheet" href="../../doc/docs.css">
+    <link rel="stylesheet" href="../../theme/lesser-dark.css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   </head>
   <body>
@@ -592,7 +593,9 @@ td {
 }
 </textarea></form>
     <script>
-      var editor = CodeMirror.fromTextArea(document.getElementById("code"), {});
+      var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+        theme: "lesser-dark"
+      });
     </script>
 
     <p><strong>MIME types defined:</strong> <code>text/less</code>.</p>
