--- a/src/external/CodeMirror2/mode/less/index.html
+++ b/src/external/CodeMirror2/mode/less/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../../lib/codemirror.css">
     <script src="../../lib/codemirror.js"></script>
     <script src="less.js"></script>
-    <style>.CodeMirror {background: #f8f8f8; border: 1px solid #ddd;}</style>
+    <style>.CodeMirror {background: #f8f8f8; border: 1px solid #ddd;} .CodeMirror-scroll {height: 400px}</style>
     <link rel="stylesheet" href="../../doc/docs.css">
     <link rel="stylesheet" href="../../theme/lesser-dark.css">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -14,15 +14,28 @@
     <h1>CodeMirror: LESS mode</h1>
     <form><textarea id="code" name="code">/* Some LESS code */
 
+button {
+    width:  32px;
+    height: 32px;
+    border: 0;
+    margin: 4px;
+    cursor: pointer;
+}
+button.icon-plus { background: url(http://dahlström.net/tmp/sharp-icons/svg-icon-target.svg#plus) no-repeat; }
+button.icon-chart { background: url(http://dahlström.net/tmp/sharp-icons/svg-icon-target.svg#chart) no-repeat; }
+
+button:hover { background-color: #999; }
+button:active { background-color: #666; }
+
 @test_a: #eeeQQQ;//this is not a valid hex value and thus parsed as an element id
-@test_b: #eeeFFF//this is a valid hex value but the declaration doesn't end with a semicolon and thus parsed as an element id
+@test_b: #eeeFFF //this is a valid hex value but the declaration doesn't end with a semicolon and thus parsed as an element id
 
 #eee aaa .box
 {
   #test bbb {
     width: 500px;
     height: 250px;
-    background-image: url(sheep.png), url(betweengrassandsky.png);
+    background-image: url(dir/output/sheep.png), url( betweengrassandsky.png );
     background-position: center bottom, left top;
     background-repeat: no-repeat;
   }
@@ -594,10 +607,12 @@ td {
 </textarea></form>
     <script>
       var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
-        theme: "lesser-dark"
+        theme: "lesser-dark",
+        lineNumbers : true,
+        matchBrackets : true
       });
     </script>
 
-    <p><strong>MIME types defined:</strong> <code>text/less</code>.</p>
+    <p><strong>MIME types defined:</strong> <code>text/x-less</code>, <code>text/css</code> (if not previously defined).</p>
   </body>
 </html>
