--- a/src/external/CodeMirror2/mode/properties/index.html
+++ b/src/external/CodeMirror2/mode/properties/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="../../lib/codemirror.css">
     <script src="../../lib/codemirror.js"></script>
     <script src="properties.js"></script>
-    <link rel="stylesheet" href="properties.css">
     <style>.CodeMirror {border-top: 1px solid #ddd; border-bottom: 1px solid #ddd;}</style>
     <link rel="stylesheet" href="../../doc/docs.css">
   </head>
@@ -34,7 +33,8 @@ spaces\ in\ keys=Not very common...
       var editor = CodeMirror.fromTextArea(document.getElementById("code"), {});
     </script>
 
-    <p><strong>MIME types defined:</strong> <code>text/x-properties</code>.</p>
+    <p><strong>MIME types defined:</strong> <code>text/x-properties</code>,
+    <code>text/x-ini</code>.</p>
 
   </body>
 </html>
