--- a/src/external/CodeMirror2/index.html
+++ b/src/external/CodeMirror2/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8"/>
     <title>CodeMirror</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans:bold"/>
     <link rel="stylesheet" type="text/css" href="doc/docs.css"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="alternate" href="http://twitter.com/statuses/user_timeline/242283288.rss" type="application/rss+xml"/>
   </head>
   <body>
@@ -123,6 +123,7 @@
       <li><a href="http://media.chikuyonok.ru/codemirror2/">Zen Coding</a> (fast XML editing)</li>
       <li><a href="http://paperjs.org/">Paper.js</a> (graphics scripting)</li>
       <li><a href="http://tour.golang.org">Go language tour</a></li>
+      <li><a href="http://codev.it/">Codev</a> (collaborative IDE)</li>
       <li><a href="http://enjalot.com/tributary/2636296/sinwaves.js">Tributary</a> (augmented editing)</li>
       <li><a href="http://prose.io/">Prose.io</a> (github content editor)</li>
       <li><a href="http://www.wescheme.org/">WeScheme</a> (learning tool)</li>
@@ -175,21 +176,29 @@
 
   <h2 id="support">Support and bug reports</h2>
 
-  <p>There is
-  a <a href="http://groups.google.com/group/codemirror">Google
-  group</a> (a sort of mailing list/newsgroup thing) for discussion
-  and news related to CodeMirror. When reporting a bug,
-  <a href="doc/reporting.html">read this first</a>. If you have
-  a <a href="http://github.com">github</a> account,
-  simply <a href="http://github.com/marijnh/CodeMirror2/issues">open
-  an issue there</a>. Otherwise, post something to
-  the <a href="http://groups.google.com/group/codemirror">group</a>,
-  or e-mail me directly: <a href="mailto:marijnh@gmail.com">Marijn
-  Haverbeke</a>.</p>
+  <p>Community discussion, questions, and informal bug reporting is
+  done on
+  the <a href="http://groups.google.com/group/codemirror">CodeMirror
+  Google group</a>. There is a separate
+  group, <a href="http://groups.google.com/group/codemirror-announce">CodeMirror-announce</a>,
+  which is lower-volume, and is only used for major announcements—new
+  versions and such. These will be cross-posted to both groups, so you
+  don't need to subscribe to both.</p>
+
+  <p>Though bug reports through e-mail are responded to, the preferred
+  way to report bugs is to use
+  the <a href="http://github.com/marijnh/CodeMirror2/issues">Github
+  issue tracker</a>. Before reporting a
+  bug, <a href="doc/reporting.html">read these pointers</a>. Also,
+  the issue tracker is for <em>bugs</em>, not requests for help.</p>
+
+  <p>When none of these seem fitting, you can
+  simply <a href="mailto:marijnh@gmail.com">e-mail the maintainer</a>
+  directly.</p>
 
   <h2 id="supported">Supported browsers</h2>
 
-  <p>The following browsers are able to run CodeMirror:</p>
+  <p>The following <em>desktop</em> browsers are able to run CodeMirror:</p>
 
   <ul>
     <li>Firefox 2 or higher</li>
@@ -207,6 +216,10 @@
   relying on the community to tell me when something breaks.
   See <a href="#support">here</a> for information on how to contact
   me.</p>
+
+  <p>Mobile browsers mostly kind of work, but, because of limitations
+  and their fundamentally different UI assumptions, show a lot of
+  quirks that are hard to work around.</p>
 
   <h2 id="commercial">Commercial support</h2>
 
