--- a/src/external/CodeMirror2/mode/xquery/index.html
+++ b/src/external/CodeMirror2/mode/xquery/index.html
@@ -25,6 +25,7 @@ THE SOFTWARE.
 */
 -->
   <head> 
+    <meta charset="utf-8">
     <title>CodeMirror 2: JavaScript mode</title> 
     <link rel="stylesheet" href="../../lib/codemirror.css"> 
     <script src="http://codemirror.net/lib/codemirror.js"></script> 
