Update CodeMirror to include a patch for autocompletion.

--- a/src/external/CodeMirror2/index.html
+++ b/src/external/CodeMirror2/index.html
@@ -69,6 +69,7 @@
       <li><a href="mode/clike/scala.html">Scala</a></li>
       <li><a href="mode/scheme/index.html">Scheme</a></li>
       <li><a href="mode/shell/index.html">Shell</a></li>
+      <li><a href="mode/sieve/index.html">Sieve</a></li>
       <li><a href="mode/smalltalk/index.html">Smalltalk</a></li>
       <li><a href="mode/smarty/index.html">Smarty</a></li>
       <li><a href="mode/sparql/index.html">SPARQL</a></li>
