--- a/src/external/CodeMirror2/mode/xquery/index.html
+++ b/src/external/CodeMirror2/mode/xquery/index.html
@@ -26,7 +26,7 @@ THE SOFTWARE.
 -->
   <head> 
     <meta charset="utf-8">
-    <title>CodeMirror 2: JavaScript mode</title> 
+    <title>CodeMirror: XQuery mode</title> 
     <link rel="stylesheet" href="../../lib/codemirror.css"> 
     <script src="http://codemirror.net/lib/codemirror.js"></script> 
     <script src="xquery.js"></script> 
@@ -42,7 +42,7 @@ THE SOFTWARE.
 		</style> 
   </head> 
   <body> 
-    <h1>CodeMirror 2: XQuery mode</h1> 
+    <h1>CodeMirror: XQuery mode</h1> 
  
 <div class="cm-s-default"> 
 	<textarea id="code" name="code"> 
