--- a/src/external/CodeMirror2/index.html
+++ b/src/external/CodeMirror2/index.html
@@ -11,10 +11,13 @@
 
 <h1><span class="logo-braces">{ }</span> <a href="http://codemirror.net/">CodeMirror</a></h1>
 
-<pre class="grey">
-<img src="doc/baboon.png" class="logo" alt="logo"/>/* In-browser code editing
+<div class="grey">
+<img src="doc/baboon.png" class="logo" alt="logo"/>
+<pre>
+/* In-browser code editing
    made bearable */
 </pre>
+</div>
 
 <div class="clear"><div class="left blk">
 
@@ -35,6 +38,7 @@
       <li><a href="mode/clike/index.html">C, C++, C#</a></li>
       <li><a href="mode/clojure/index.html">Clojure</a></li>
       <li><a href="mode/coffeescript/index.html">CoffeeScript</a></li>
+      <li><a href="mode/commonlisp/index.html">Common Lisp</a></li>
       <li><a href="mode/css/index.html">CSS</a></li>
       <li><a href="mode/diff/index.html">diff</a></li>
       <li><a href="mode/ecl/index.html">ECL</a></li>
@@ -120,6 +124,7 @@
       <li><a href="http://brackets.io">Adobe Brackets</a> (code editor)</li>
       <li><a href="http://www.mergely.com/">Mergely</a> (interactive diffing)</li>
       <li><a href="https://script.google.com/">Google Apps Script</a></li>
+      <li><a href="https://github.com/github/android">GitHub's Android app</a></li>
       <li><a href="http://eloquentjavascript.net/chapter1.html">Eloquent JavaScript</a> (book)</li>
       <li><a href="http://media.chikuyonok.ru/codemirror2/">Zen Coding</a> (fast XML editing)</li>
       <li><a href="http://paperjs.org/">Paper.js</a> (graphics scripting)</li>
@@ -150,17 +155,17 @@
   href="LICENSE">MIT-style</a> license. To get it, you can download
   the <a href="http://codemirror.net/codemirror.zip">latest
   release</a> or the current <a
-  href="http://codemirror.net/codemirror2-latest.zip">development
+  href="http://codemirror.net/codemirror-latest.zip">development
   snapshot</a> as zip files. To create a custom minified script file,
   you can use the <a href="doc/compress.html">compression API</a>.</p>
 
   <p>We use <a href="http://git-scm.com/">git</a> for version control.
   The main repository can be fetched in this way:</p>
 
-  <pre class="code">git clone http://marijnhaverbeke.nl/git/codemirror2</pre>
+  <pre class="code">git clone http://marijnhaverbeke.nl/git/codemirror</pre>
 
   <p>CodeMirror can also be found on GitHub at <a
-  href="http://github.com/marijnh/CodeMirror2">marijnh/CodeMirror2</a>.
+  href="http://github.com/marijnh/CodeMirror">marijnh/CodeMirror</a>.
   If you plan to hack on the code and contribute patches, the best way
   to do it is to create a GitHub fork, and send pull requests.</p>
 
@@ -172,7 +177,7 @@
 
   <p>For those who want to learn more about the code, there is
   an <a href="doc/internals.html">overview of the internals</a> available.
-  The <a href="http://github.com/marijnh/CodeMirror2">source code</a>
+  The <a href="http://github.com/marijnh/CodeMirror">source code</a>
   itself is, for the most part, also well commented.</p>
 
   <h2 id="support">Support and bug reports</h2>
@@ -188,7 +193,7 @@
 
   <p>Though bug reports through e-mail are responded to, the preferred
   way to report bugs is to use
-  the <a href="http://github.com/marijnh/CodeMirror2/issues">Github
+  the <a href="http://github.com/marijnh/CodeMirror/issues">Github
   issue tracker</a>. Before reporting a
   bug, <a href="doc/reporting.html">read these pointers</a>. Also,
   the issue tracker is for <em>bugs</em>, not requests for help.</p>
@@ -270,10 +275,24 @@
 
   <ul>
     <li><a href="doc/manual.html">User manual</a></li>
-    <li><a href="http://github.com/marijnh/CodeMirror2">Browse the code</a></li>
+    <li><a href="http://github.com/marijnh/CodeMirror">Browse the code</a></li>
   </ul>
 
   <h2 id=releases>Releases</h2>
+
+  <p class="rel">23-08-2012: <a href="http://codemirror.net/codemirror-2.33.zip">Version 2.33</a>:</p>
+
+  <ul class="rel-note">
+    <li>New mode: <a href="mode/sieve/">Sieve</a>.</li>
+    <li>New <a href="doc/manual.html#getViewport"><code>getViewPort</code></a> and <a href="doc/manual.html#option_onViewportChange"><code>onViewportChange</code></a> API.</li>
+    <li><a href="doc/manual.html#option_cursorBlinkRate">Configurable</a> cursor blink rate.</li>
+    <li>Make binding a key to <code>false</code> disabling handling (again).</li>
+    <li>Show non-printing characters as red dots.</li>
+    <li>More tweaks to the scrolling model.</li>
+    <li>Expanded testsuite. Basic linter added.</li>
+    <li>Remove most uses of <code>innerHTML</code>. Remove <code>CodeMirror.htmlEscape</code>.</li>
+    <li><a href="https://github.com/marijnh/CodeMirror/compare/v2.32...v2.33">Full list</a> of patches.</li>
+  </ul>
 
   <p class="rel">23-07-2012: <a href="http://codemirror.net/codemirror-2.32.zip">Version 2.32</a>:</p>
 
@@ -290,7 +309,7 @@
     <li>Add <a href="doc/manual.html#getHistory"><code>getHistory</code></a> and <a href="doc/manual.html#setHistory"><code>setHistory</code></a> methods.</li>
     <li>Allow custom line separator string in <a href="doc/manual.html#getValue"><code>getValue</code></a> and <a href="doc/manual.html#getRange"><code>getRange</code></a>.</li>
     <li>Support double- and triple-click drag, double-clicking whitespace.</li>
-    <li>And more... <a href="https://github.com/marijnh/CodeMirror2/compare/v2.3...v2.31">(all patches)</a></li>
+    <li>And more... <a href="https://github.com/marijnh/CodeMirror/compare/v2.3...v2.31">(all patches)</a></li>
   </ul>
 
   <p class="rel">22-06-2012: <a href="http://codemirror.net/codemirror-2.3.zip">Version 2.3</a>:</p>
@@ -302,7 +321,7 @@
     <li>Add <a href="demo/multiplex.html">mode-multiplexing</a> utility script.</li>
     <li>Fix bug where right-click paste works in read-only mode.</li>
     <li>Add a <a href="doc/manual.html#getScrollInfo"><code>getScrollInfo</code></a> method.</li>
-    <li>Lots of other <a href="https://github.com/marijnh/CodeMirror2/compare/v2.25...v2.3">fixes</a>.</li>
+    <li>Lots of other <a href="https://github.com/marijnh/CodeMirror/compare/v2.25...v2.3">fixes</a>.</li>
   </ul>
 
   <p class="rel">23-05-2012: <a href="http://codemirror.net/codemirror-2.25.zip">Version 2.25</a>:</p>
@@ -430,18 +449,6 @@
     <li>Fix browser's built-in search in Webkit.</li>
     <li>Make double- and triple-click work in IE.</li>
     <li>Various fixes to modes.</li>
-  </ul>
-
-  <p class="rel">27-10-2011: <a href="http://codemirror.net/codemirror-2.16.zip">Version 2.16</a>:</p>
-  <ul class="rel-note">
-    <li>Add <a href="mode/perl/index.html">Perl</a>, <a href="mode/rust/index.html">Rust</a>, <a href="mode/tiddlywiki/index.html">TiddlyWiki</a>, and <a href="mode/groovy/index.html">Groovy</a> modes.</li>
-    <li>Dragging text inside the editor now moves, rather than copies.</li>
-    <li>Add a <a href="doc/manual.html#coordsFromIndex"><code>coordsFromIndex</code></a> method.</li>
-    <li><strong>API change</strong>: <code>setValue</code> now no longer clears history. Use <a href="doc/manual.html#clearHistory"><code>clearHistory</code></a> for that.</li>
-    <li><strong>API change</strong>: <a href="doc/manual.html#markText"><code>markText</code></a> now
-    returns an object with <code>clear</code> and <code>find</code>
-    methods. Marked text is now more robust when edited.</li>
-    <li>Fix editing code with tabs in Internet Explorer.</li>
   </ul>
 
   <p><a href="doc/oldrelease.html">Older releases...</a></p>
