--- a/src/client/frame-glue/src/index.html
+++ b/src/client/frame-glue/src/index.html
@@ -23,7 +23,7 @@
 		<ul>
 			<li><a href='#modelTab' 		>Model Editor			</a></li>
 			<li><a href='#lfTab'			>Logical Formulation	</a></li>
-			<!--#IFDEF server -->
+			<!--#IFDEF SBVR_SERVER_ENABLED -->
 				<li><a href='#prepTab'			>Preprocessed LF		</a></li>
 				<li><a href='#sqlTab'			>SQL					</a></li>
 				<li><a href='#dataTab'			>Data Browser			</a></li>
@@ -42,16 +42,14 @@
 					<input type="button" id='save_model' value="Publish"  onClick="saveModel();return false">
 					<input type="button" id='blm1' value="Load Example 1"  onClick="loadmod(model1);return false">
 					<input type="button" id='blm2' value="Load Example 2"  onClick="loadmod(model2);return false">
-					<!--#IFDEF server -->
-						<input type="button" id='blm3' value="Load Example 3"  onClick="loadmod(model3);return false">
-					<!--#ENDIFDEF -->
-					<!--#IFDEF editor -->
+					<input type="button" id='blm3' value="Load Example 3"  onClick="loadmod(model3);return false">
+					<!--#IFDEF EDITOR_SERVER_ENABLED -->
 						<input type="button" id='bpm'  value="Parse Model"   onClick="parseModel();return false">
 					<!--#ENDIFDEF-->
 					<input type="button" id='clear_editor' value="Clear Editor"  onClick="sbvrEditor.setValue('');return false">
 					<div id="downloadify"></div>
 					<div id="TheFileLoader"></div>
-					<!--#IFDEF server -->
+					<!--#IFDEF SBVR_SERVER_ENABLED -->
 						<input type="button" id='bl'  value="Login"         onClick="login();return false">
 						<input type="button" id='bem'  value="Execute Model" onClick="transformClient(sbvrEditor.getValue());return false">
 						<input type="button" id='bum'  value="Update Model"  onClick="return false">
@@ -64,7 +62,7 @@
 			</form>
 		</div>
 		<div id="lfTab"><textarea id="lfArea" rows="15" cols="136"></textarea></div>
-		<!--#IFDEF server -->
+		<!--#IFDEF SBVR_SERVER_ENABLED -->
 			<div id="prepTab"><textarea id="prepArea" rows="15" cols="136"></textarea></div>
 			<div id="sqlTab"><textarea id="sqlArea" rows="15" cols="136"></textarea></div>
 			<div id="dataTab"></div>
