--- a/src/client/ometa-frame/src/ometa-dev.html
+++ b/src/client/ometa-frame/src/ometa-dev.html
@@ -16,8 +16,8 @@ Copyright 2011 University of Surrey
 
 ﻿<html>
 	<head>
-		<script src="../../../external/require-1.0.4.min.js"></script>
-		<script src="../../../common/config/requirejs.js"></script>
+		<script src="../../../../external/require-1.0.4.min.js"></script>
+		<script src="../../../../common/config/requirejs.js"></script>
 		<script>
 			requirejs(['main']);
 		</script>
