Add a DEV/BUILD directive to allow for paths changing.

--- a/src/client/frame-glue/src/index.html
+++ b/src/client/frame-glue/src/index.html
@@ -3,8 +3,13 @@
 	<meta charset="utf-8">
 
 	<title>rulemotion canvas</title>
+	<!--#DEV-->
 	<script src="../../../../external/require-1.0.4.min.js"></script>
 	<script src="../../../../common/config/requirejs.js"></script>
+	<!--#BUILT
+	<script src="../../external/require-1.0.4.min.js"></script>
+	<script src="../../common/config/requirejs.js"></script>
+	-->
 	<script>
 		requirejs(['main']);
     </script>
