--- a/src/client/ometa-frame/src/ometa-dev.html
+++ b/src/client/ometa-frame/src/ometa-dev.html
@@ -16,8 +16,13 @@ Copyright 2011 University of Surrey
 
 ﻿<html>
 	<head>
+		<!--#DEV-->
 		<script src="../../../../external/require-1.0.4.min.js"></script>
-		<script src="../../../../common/config/requirejs.js"></script>
+		<script src="../../../../common/config/src/requirejs.js"></script>
+		<!--#BUILT
+		<script src="../../external/require-1.0.4.min.js"></script>
+		<script src="../../common/config/requirejs.js"></script>
+		-->
 		<script>
 			requirejs(['main']);
 		</script>
