Update requirejs to 1.0.8 and remove version from filename to ease future updates.

--- a/src/client/frame-glue/src/index.html
+++ b/src/client/frame-glue/src/index.html
@@ -4,10 +4,10 @@
 
 	<title>rulemotion canvas</title>
 	<!--#DEV-->
-	<script src="../../../../external/require-1.0.4.min.js"></script>
+	<script src="../../../../external/require.min.js"></script>
 	<script src="../../../../common/config/src/requirejs.js"></script>
 	<!--#BUILT
-	<script src="../../external/require-1.0.4.min.js"></script>
+	<script src="../../external/require.min.js"></script>
 	<script src="../../common/config/requirejs.js"></script>
 	-->
 	<script>
