Use require-css to load CSS files

--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>SBVR Lab 2.0</title>
         <link rel="shortcut icon" href="static/favicon.ico" />
-        <link rel="stylesheet" href="static/main.css" />
-        <script data-main="main" src="../lib/require.js"></script>
+        <link rel="stylesheet" href="main.css" />
+        <script data-main="scripts/main" src="../lib/require.js"></script>
     </head>
     <body>
     	<div id="header">
