Hardcoded examples, FIXME

--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -15,10 +15,10 @@
 				</a>
 				<ul class="dropdown-menu">
 					<li>
-						<a href="#">Pilots</a>
+						<a href="#/3E3tU3">Pilots</a>
 					</li>
 					<li>
-						<a href="#">Universities</a>
+						<a href="#/lPWulm">Universities</a>
 					</li>
 				</ul>
 				<button class="btn">New</button>
