Some refactoring using Backbone.View for rendering. Cleaner interface. Login modal. New/Publish functionality works

--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -2,31 +2,11 @@
 <html>
 	<head>
 		<title>SBVR Lab 2.0</title>
+		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
 		<link rel="stylesheet" href="main.css" />
 		<script data-main="scripts/main" src="../lib/require.js"></script>
 	</head>
 	<body>
-		<div id="header">
-			<div class="btn-group">
-				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-					Examples
-					<span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu">
-					<li>
-						<a href="#/3E3tU3">Pilots</a>
-					</li>
-					<li>
-						<a href="#/lPWulm">Universities</a>
-					</li>
-				</ul>
-				<button class="btn">New</button>
-				<button class="btn">Publish</button>
-			</div>
-			<h1><img src="static/logo.png" alt="Rulemotion" />SBVR Lab 2.0</h1>
-			<ul id="tabs" class="nav nav-tabs"></ul>
-		</div>
-		<div id="content" class="tab-content"></div>
 	</body>
 </html>
