--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
 		<link rel="stylesheet" href="main.css" />
-		<script data-main="scripts/main" src="../lib/require.js"></script>
+		<script data-main="main" src="../lib/require.js"></script>
 	</head>
 	<body>
 	</body>
