Moving forward with user login and registration.

--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -7,6 +7,5 @@
 		<link rel="stylesheet" href="main.css" />
 		<script data-main="main" src="../lib/require.js"></script>
 	</head>
-	<body>
-	</body>
+	<body></body>
 </html>
