--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -4,8 +4,12 @@
 		<title>SBVR Lab 2.0</title>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="../main.css" />
 		<script data-main="main" src="../lib/require.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<div style="background: #E7E9EB; position: fixed; width: 100%; height: 100%;">
+			<div style="height: 20px; width: 200px; top: 50%; left: 50%; margin-left: -100px; margin-top: -10px; position: absolute; text-align: center; font-size: 25px; vertical-align: middle"><img style="margin-top: -4px;" src="static/loader.gif" /> Loading...</div>
+		</div>
+	</body>
 </html>
