--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -4,7 +4,7 @@
 		<title>SBVR Lab 2.0</title>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
-		<link rel="stylesheet" href="../main.css" />
+		<link rel="stylesheet" href="main.css" />
 		<script data-main="main" src="../lib/require.js"></script>
 	</head>
 	<body>
