--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -4,8 +4,9 @@
 		<title>SBVR Lab 2.0</title>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
-		<link rel="stylesheet" href="main.css" />
-		<script data-main="main" src="../lib/require.js"></script>
+		<link rel="stylesheet" href="main.css?1" />
+		<script src="../lib/require.js?1"></script>
+		<script src="main.js?1"></script>
 	</head>
 	<body>
 		<div style="background: #E7E9EB; position: fixed; width: 100%; height: 100%;">
