Use defer attribute

--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
 		<link rel="stylesheet" href="main.css?1" />
-		<script src="../lib/require.js?1"></script>
-		<script src="main.js?1"></script>
+		<script defer src="../lib/require.js?2"></script>
+		<script defer src="main.js?2"></script>
 	</head>
 	<body>
 		<div style="background: #E7E9EB; position: fixed; width: 100%; height: 100%;">
