--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -5,6 +5,19 @@
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="static/favicon.ico" />
 		<link rel="stylesheet" href="main.css?1" />
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-35973681-1']);
+			_gaq.push(['_trackPageview']);
+			(function() {
+				var ga = document.createElement('script');
+				ga.type = 'text/javascript';
+				ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; 
+				s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 	</head>
 	<body>
 		<div style="background: #E7E9EB; position: fixed; width: 100%; height: 100%;">
