--- a/src/client/lib/codemirror/index.html
+++ b/src/client/lib/codemirror/index.html
@@ -93,6 +93,7 @@
       <li><a href="demo/complete.html">Autocompletion</a> (<a href="demo/xmlcomplete.html">XML</a>)</li>
       <li><a href="demo/search.html">Search/replace</a></li>
       <li><a href="demo/folding.html">Code folding</a></li>
+      <li><a href="demo/bidi.html">Bi-directional text</a></li>
       <li><a href="demo/widget.html">Line widgets</a> (via JSHint)</li>
       <li><a href="demo/buffers.html">Split view</li>
       <li><a href="demo/mustache.html">Mode overlays</a></li>
@@ -283,6 +284,12 @@
   </ul>
 
   <h2 id=releases>Releases</h2>
+
+  <p class="rel">21-01-2013: <a href="http://codemirror.net/codemirror-3.02.zip">Version 3.02</a>:</p>
+
+  <p class="rel-note">Single-bugfix release. Fixes a problem that
+  prevents CodeMirror instances from being garbage-collected after
+  they become unused.</p>
 
   <p class="rel">21-01-2013: <a href="http://codemirror.net/codemirror-3.01.zip">Version 3.01</a>:</p>
 
