--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -23,7 +23,6 @@
 		<div style="background: #E7E9EB; position: fixed; width: 100%; height: 100%;">
 			<div style="height: 20px; width: 200px; top: 50%; left: 50%; margin-left: -100px; margin-top: -10px; position: absolute; text-align: center; font-size: 25px; vertical-align: middle"><img style="margin-top: -4px;" src="static/loader.gif" /> Loading...</div>
 		</div>
-		<script src="../lib/requirejs/require.js"></script>
-		<script src="main.js?10"></script>
+		<script type="text/javascript" src="main.js" charset="utf-8"></script>
 	</body>
 </html>
